# plex_debrid

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: clear_cache.yml  docker-image.yml  dockerhub-description.yml  release-please.yaml
api/: api_service.py  models.py
api/routers/: config.py  logs.py  oauth.py  settings.py
base/: __init__.py
content/: classes.py
content/services/: jellyfin.py  overseerr.py  plex.py  textfile.py  trakt.py
debrid/: __init__.py
debrid/services/: __init__.py  alldebrid.py  debridlink.py  premiumize.py  putio.py  realdebrid.py  torbox.py
scraper/: __init__.py
scraper/services/: __init__.py  comet.py  eztv.py  jackett.py  limetorrents.py  magnetdl.py  mediafusion.py  nyaa.py  orionoid.py  prowlarr.py  rarbg.py  rarbgv2.py  thepiratebay.py  torbox.py  torrentgalaxy.py  torrentio.py  x1337.py  yts.py  zilean.py
settings/: __init__.py
ui/: __init__.py  ui_print.py  ui_settings.py
