[tool.poetry]
name = "plex_debrid"
version = "3.5.1"
description = ""
authors = ["I-am-PUID-0 <36779668+I-am-PUID-0@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "plex_debrid" }]

[tool.poetry.dependencies]
python = ">=3.11"
bs4 = ">=0.0.2,<0.0.3"
regex = ">=2024.11.6,<2025.0.0"
requests = ">=2.32.3,<3.0.0"
six = ">=1.17.0,<2.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = "^0.34.2"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
pytest = ">=8.3.5,<9.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
